--- a/src/assets/styles/responsive.css
+++ b/src/assets/styles/responsive.css
@@ -11,7 +11,7 @@
 */
 @media (min-width: 992px) {
   .layout-dashboard .ant-layout-footer {
-    margin: 0 40px 0 0;
+    margin: 0 0 20px 20px;
   }
   .layout-dashboard .ant-layout-sider.sider-primary {
     margin: 20px 0 0 20px;
@@ -21,7 +21,7 @@
   .layout-dashboard .ant-layout {
     width: auto;
     flex-shrink: 1;
-    margin-left: 270px;
+    margin-left: 120px;
   }
   .layout-dashboard .header-control .sidebar-toggler {
     display: none;
