--- a/src/assets/styles/responsive.css
+++ b/src/assets/styles/responsive.css
@@ -21,7 +21,7 @@
   .layout-dashboard .ant-layout {
     width: auto;
     flex-shrink: 1;
-    margin-left: 120px;
+    /* margin-left: 120px; */
   }
   .layout-dashboard .header-control .sidebar-toggler {
     display: none;
